# cxxembedder

./: .gitignore  .gitmodules  CMakeLists.txt  CSelenium.cpp  CSelenium.h  MAIN.cpp  README.md  Selenium-cpp.sln  Selenium-cpp.vcxproj  Selenium-cpp.vcxproj.filters  cxxembedder.hpp
EMBEDDER_IN_CXX/: CMakeLists.txt  cxxembedder.hpp  main.cpp
PythonSrc/: pyemb1.py  pyemb2.py  pyemb3.py
dependencies/: _ctypes_test.pyd  _testbuffer.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testmultiphase.pyd  struct.pyo
include/python/: pyhelper.hpp
python/: __CXX_EMBED_HELPER.hpp  cxxembedder.hpp  object.h  pyhelper.hpp
python/LIBS/charset_normalizer-2.1.0.dist-info/: RECORD
python/LIBS/chromedriver_autoinstaller-0.3.1.dist-info/: RECORD
python/LIBS/names-0.3.0.dist-info/: RECORD
python/LIBS/selenium-4.3.0.dist-info/: RECORD
x64/Release/: Selenium-cpp.exe.recipe  Selenium-cpp.ilk  Selenium-cpp.vcxproj.FileListAbsolute.txt
x64/Release/Selenium-cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Selenium-cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
